<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:background="@color/colorPlaceholder">

            <ImageSwitcher
                android:id="@+id/imageSwitcher"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">
            </ImageSwitcher>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignParentTop="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:text="Title"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:maxLines="3"
                    android:textSize="30dp"
                    android:textColor="@android:color/white">
                </TextView>

                <TextView
                    android:id="@+id/category"
                    android:text="Category"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:textSize="19dp"
                    android:textColor="@android:color/white">
                </TextView>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/darkGrayFont"
            android:text="@string/about"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColor="@color/grayFont"
            android:text="@string/no_description"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/price_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="@color/separator"></LinearLayout>

        <RelativeLayout
            android:id="@+id/price_container"
            android:layout_width="fill_parent"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/price_label"
                android:text="@string/price_range"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textColor="@color/darkGrayFont" />

            <TextView
                android:id="@+id/price"
                android:text="0$"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textColor="@color/darkGrayFont" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator"></LinearLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/location_label"
                android:text="@string/location"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textColor="@color/darkGrayFont" />

            <TextView
                android:id="@+id/location"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textColor="@color/darkGrayFont" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator"></LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_height="60dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/icon_location_pin_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/small_margin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address_label"
                    android:text="@string/address"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/darkGrayFont" />

                <TextView
                    android:id="@+id/address"
                    android:text=""
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/darkGrayFont" />

            </LinearLayout>

        </LinearLayout>

        <org.osmdroid.views.MapView android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </LinearLayout>
</ScrollView>